@@ -62,11 +62,12 @@ public class PendingTaskUtil {
         pendingTask.setName(PENDING_TASK_NAME);
         pendingTask.setReferenceId("MANUAL_"+reScheduleHearing.getRescheduledRequestId());
         pendingTask.setStatus(PENDING_TASK_STATUS);
-        pendingTask.setActionCategory(SCHEDULE_HEARING_ACTION_CATEGORY);
+        pendingTask.setActionCategory(RE_SCHEDULE_PENDING_TASK_ACTION_CATEGORY);
         pendingTask.setFilingNumber(reScheduleHearing.getCaseId());
-        pendingTask.setAssignedRole(List.of("JUDGE_ROLE"));
+        pendingTask.setAssignedRole(Collections.singletonList(VIEW_RE_SCHEDULE_APPLICATION));
         pendingTask.setScreenType(SCREEN_TYPE);
         LocalDateTime currentTime = LocalDateTime.now();
+        pendingTask.setReferenceEntityType(RE_SCHEDULE_APPLICATION_TYPE);
         LocalDateTime slaDate=currentTime.plusDays(configuration.getJudgePendingSla());
 
         log.info("sla date {}", slaDate);
